feat: migrate reviews to long-lived cs-ide JSON-RPC server
Replace per-invocation CLI analysis with a JRE+JAR IDE daemon,
event-driven candidate tracking, and the new cs-ide-jre artifact naming.

Co-authored-by: Cursor <cursoragent@cursor.com>